# home-uk-rust

./: .gitignore  Cargo.toml  init.sh
crates/: egui
src/: main.rs
