[package]
name = "home-uk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
csv = "1.1.6"
chrono = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
