[package]
name = "home-uk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
csv = "1.1.6"
chrono = "0.4.22"

egui = { path = "crates/egui/crates/egui" }
eframe = { path = "crates/egui/crates/eframe", features = ["wgpu"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# bytemuck = { version = "1.7.1", optional = true }
tracing = "0.1.37"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
